--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -21,7 +21,16 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
+
+    compile 'com.mikepenz:iconics-core:2.2.0@aar'
+    compile 'com.mikepenz:google-material-typeface:2.2.0.1@aar'
+
+    compile 'io.reactivex:rxjava:1.0.16'
+    compile 'io.reactivex:rxandroid:1.0.1'
+
+    compile project(':library')
 }
