use jayrave's percent-layouts to work around issue 186875

--- a/uxlayouts/build.gradle
+++ b/uxlayouts/build.gradle
@@ -45,8 +45,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:percent:23.1.0'
-    compile 'com.android.support:support-annotations:23.1.0'
+    compile 'com.jayrave.layouts:percent-layouts:1.1'
 }
 
 // -------------------------------------------------------------------------------------------------
