--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     compile 'io.reactivex:rxjava:1.0.16'
     compile 'io.reactivex:rxandroid:1.0.1'
 
-    compile project(':uxlayouts')
+    compile project(':ux-layouts')
 }
